--- a/MoodelInquiry/pom.xml
+++ b/MoodelInquiry/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>fi.haagahelia</groupId>
 	<artifactId>MoodelInquiry</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
 	<name>MoodelInquiry</name>
 	<description>The Spring backend for the moodle inquiry</description>
 
@@ -19,11 +20,16 @@
 	</properties>
 
 	<dependencies>
+	
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -39,6 +45,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		
+		
 	</dependencies>
 
 	<build>
