create drob disabled

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jackson.serialization.INDENT_OUTPUT=true
 
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+!spring.jpa.hibernate.ddl-auto=create-drop
 
 
 !spring.h2.console.enable=true
